--- a/tutorial-6/index.html
+++ b/tutorial-6/index.html
@@ -2,4 +2,7 @@
     <head>
         <title>Tutorial 6</title>
     </head>
+    <footer>
+        <p>(c) 2024 Tutorial 6 APAP</p>
+    </footer>
 </html>
