--- a/tutorial-6/index.html
+++ b/tutorial-6/index.html
@@ -2,6 +2,9 @@
     <head>
         <title>Tutorial 6</title>
     </head>
+    <body>
+        <p>Body from feat/tutorial-6-advancedgit-1</p>
+    </body>
     <footer>
         <p>(c) 2024 Tutorial 6 APAP</p>
     </footer>
